--- a/movie.html
+++ b/movie.html
@@ -6,6 +6,11 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<style type="text/css">
+		.mui-bar{
+			background-color: white;
+		}
+		</style>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
