--- a/rdetail.html
+++ b/rdetail.html
@@ -12,6 +12,9 @@
 			.mui-content{
 				margin:0 0.5rem;
 			}
+			.commentlist{
+				border-bottom: 1px solid #cec9c9;
+			}
 		</style>
 		<script type="text/javascript">
 			mui.init({
@@ -26,6 +29,12 @@
 		    <h1 class="mui-title" id="tittle"></h1>
 		</header>
 		<div class="mui-content" >
+			<!--<div class="commentlist">
+				<img src="img/logo.png"/ class="commentuser">
+				<span style=" top: 15px; position: relative;color:#86bef8;">作者</span>
+				<span style="position: relative;display: block; ">Aug 23.2017</span>
+			</div>
+			<img src="img/start.png" style="width: 30px;float: right; margin-top: -3.2rem;"/>-->
 			<h3 id="headtitle"></h3>  <!--标题-->
 			<span id="author"></span>
 		    <div id="rdetail"></div>  <!--内容-->
