--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
 		  <a class="mui-icon mui-icon-contact mui-pull-right">
 		    <!--个人中心-->
 		  </a>
-		  <h1 class="mui-title">音乐</h1>
+		  <h1 class="mui-title" style="font-weight: bold;">音乐</h1>
 		</header>
 		<div class="mui-content">
 			<!--音乐插图-->
@@ -38,7 +38,7 @@
 		    </div>
 			<audio loop="loop"  preload="auto" id="mp">
             	<source src="">
-       		 </audio>
+       		</audio>
 		    <!--音乐内容-->
 		    <div style="margin:10px;" class="music">
 		    	<div style="border-bottom:1px solid gainsboro;height: 3rem;">
