--- a/reader.html
+++ b/reader.html
@@ -23,6 +23,9 @@
 				text-align: center;
 				color: #86bef8;
 			}
+			.mui-bar{
+			background-color: white;
+			}
 			h4{
 				font-size: 13px;
 			}
