--- a/play.html
+++ b/play.html
@@ -22,7 +22,7 @@
 			}
 		</style>
 	</head>
-
+//好像很久没看到有视频的了~~~可能要废了
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-close mui-pull-right"></a>
