--- a/reader.html
+++ b/reader.html
@@ -31,7 +31,7 @@
 			}
 		</style>
 	</head>
-//近期把滑动查看历史也做了，同样还是webview，性能可能会很差劲~~~暂未找到解决办法
+ <!--近期把滑动查看历史也做了，同样还是webview，性能可能会很差劲~~~暂未找到解决办法-->
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		  <a class=" mui-icon mui-icon-search mui-pull-left">
