--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
 			mui.init()
 		</script>
 	</head>
-
+	<!--得空这块滑动也得做-->
 	<body >
 		<header class="mui-bar mui-bar-nav">
 		  <a class=" mui-icon mui-icon-search mui-pull-left">
