--- a/detail.html
+++ b/detail.html
@@ -145,6 +145,7 @@
 				 	copyright.innerHTML =json.data.data[0].copyright ;
 				 }
 			});
+		//评论上拉加载没有做
 			ca.get({
 				url:'http://v3.wufazhuce.com:8000/api/comment/praiseandtime/movie/'+mid+'/0?version=v4.1',
 				date:{state:'index'},
