--- a/rdetail.html
+++ b/rdetail.html
@@ -47,6 +47,7 @@
 		<script src="js/castapp.js" type="text/javascript" charset="utf-8"></script>
 		<script src="html5plus://ready"></script>
 		<script type="text/javascript">
+			//利用本地存储来传递ID
 			ca.init();
 			var self = plus.webview.currentWebview();
 			var tittle = ca.id('tittle');
