放弃原生的轮播-不会改样式主要是

--- a/detail.html
+++ b/detail.html
@@ -15,7 +15,7 @@
 			});
 		</script>
 	</head>
-
+<!--使用原生组件不太了解怎么更改样式，故放弃了，所以点击查看图片放大等功能也不打算做了，虽然利用mui的预览可以查看，但是意义已经不大了-->
 	<body >
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
