--- a/music/mhistory.html
+++ b/music/mhistory.html
@@ -8,7 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
 		</script>
 		<style type="text/css">
 			p{
