--- a/history/hdetail.html
+++ b/history/hdetail.html
@@ -9,7 +9,7 @@
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/time.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
 		</script>
 		<link rel="stylesheet" type="text/css" href="../css/comment.css"/>
 	    <style type="text/css">
