--- a/music/mhistory.html
+++ b/music/mhistory.html
@@ -47,7 +47,7 @@
 		</header>
 		<div class="mui-content">
 			<ul class="mui-table-view">
-			    <li class="mui-table-view-cell mui-media">
+<!-- 			    <li class="mui-table-view-cell mui-media">
 			        <a href="javascript:;">
 			            <img class="mui-media-object mui-pull-left" src="../img/logo.png">
 			            <div class="mui-media-body">
@@ -55,7 +55,7 @@
 			                <p class="mui-ellipsis">能和心爱的人一起睡觉，是件幸福的事情；可是，打呼噜怎么办？</p>
 			            </div>
 			        </a>
-			    </li>
+			    </li> -->
 			</ul>
 		</div>
 	</body>
